add login and logout methods
